small fixes. cv and coverletter added

--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
             <p>and I am currently studying front-end developer at Noroff.</p>
           </div>
           <div class="btn-group">
-            <div class="btn">Download CV</div>
-            <div class="btn">Contact me</div>
+            <div class="btn">
+              <a href="./downloads/Lise Ervik Cover letter.pdf" download
+                >Download Cover Letter</a
+              >
+            </div>
+            <div class="btn">
+              <a href="./downloads/Lise Ervik resume.pdf" download
+                >Download CV</a
+              >
+            </div>
           </div>
 
           <div class="socials">
@@ -94,9 +102,8 @@
           <img src="" alt="" />
           <h3>RainyDays</h3>
           <p>
-            In this project I built a website for a fictional company called
-            RainyDays. The website is built using HTML and CSS. It is responsive
-            and showcases jackets made for any weather we may experience.
+            This project is a website for a fictional company called RainyDays.
+            The website is built using HTML and CSS.
           </p>
           <div class="btn-group">
             <div class="btn rainyDaysLive">Live Demo</div>
@@ -107,9 +114,8 @@
           <img src="img/semesterProject.png" alt="" />
           <h3>Semester Project</h3>
           <p>
-            This project let me play around with more HTML and CSS to create a
-            website for a fictional science museum. I am aspecially proud of the
-            nightime page of the website.
+            This project let me create a website for a fictional science museum.
+            I am aspecially proud of the nightime page of the website.
           </p>
           <div class="btn-group">
             <div class="btn semesterProjectLive">Live Demo</div>
@@ -120,10 +126,9 @@
           <img src="img/javaScriptProject.png" alt="" />
           <h3>JavaScript1</h3>
           <p>
-            Probably the hardets project I have done so far. Here I got to use
-            JavaScript to create a fictional video-store website using API to
-            fetch data. I learned a lot about JavaScript and how to work with
-            data.
+            THis project let me use JavaScript to create a fictional video-store
+            website using API to fetch data. I learned a lot about JavaScript
+            and how to work with data.
           </p>
           <div class="btn-group">
             <div class="btn javaScriptLive">Live Demo</div>
