adding project image

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
       <h2 class="section-title">Projects</h2>
       <div class="projects-grid">
         <div class="project-card">
-          <img src="" alt="" />
+          <img
+            src="./img/HTMLCSSproject.png"
+            alt="HTML and CSS project screenshot"
+          />
           <h3>RainyDays</h3>
           <p>
             This project is a website for a fictional company called RainyDays.
@@ -111,7 +114,10 @@
           </div>
         </div>
         <div class="project-card">
-          <img src="img/semesterProject.png" alt="" />
+          <img
+            src="img/semesterProject.png"
+            alt="Semester Project screenshot"
+          />
           <h3>Semester Project</h3>
           <p>
             This project let me create a website for a fictional science museum.
@@ -123,7 +129,10 @@
           </div>
         </div>
         <div class="project-card">
-          <img src="img/javaScriptProject.png" alt="" />
+          <img
+            src="img/javaScriptProject.png"
+            alt="JavaScript project screenshot"
+          />
           <h3>JavaScript1</h3>
           <p>
             THis project let me use JavaScript to create a fictional video-store
