added more text

--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
             <h1>Lise</h1>
             <p>and I am currently studying front-end developer at Noroff.</p>
           </div>
+          <div class="about-text">
+            As a nurse I worked in complex and time-sensitive siuations where
+            digital solutions are often needed to support good patient care.
+            <br />
+            I am passionate about creating user-friendly and accessible digital
+            experiences that can make a positive impact on people's lives.
+            <br />
+            My goal is to combine my healthcare background with my front-end
+            development skills to create innovative solutions that improve the
+            quality of life for individuals in need.
+          </div>
           <div class="btn-group">
             <div class="btn">
               <a href="./downloads/Lise Ervik Cover letter.pdf" download
@@ -87,7 +98,6 @@
               >
             </div>
           </div>
-
           <div class="socials">
             <i class="fa-brands fa-github github-icon"></i>
             <i class="fa-brands fa-linkedin linkedin-icon"></i>
