--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           />
           <h3>JavaScript1</h3>
           <p>
-            THis project let me use JavaScript to create a fictional video-store
+            This project let me use JavaScript to create a fictional video-store
             website using API to fetch data. I learned a lot about JavaScript
             and how to work with data.
           </p>
